Change log (recent comes first)

18 Mar 2012: Released v 0.3.2: bugfixes and improvements.
  * Introduced ``Image'' object to include external PNG files and
    use them as patterns for filling areas (instead of colors or
    gradients).
  * Introduced a Figure object, so that ``Figure[...]'' can be used instead
    of the (somewhat awkward) ``Window[][...]''.
  * Introduced multi-line, recursive comments a la OCaml: (* ... *)
  * Introduced macros in comments (** ... *) as a mean of injecting meta
    information into the box sources.
  * Species are now fully implemented.
  * Pattern was renamed to PATTERN and Pattern is defined as the species
    ``(Color=>Gradient=>PATTERN)'', which allows using Color, Gradient,
    as alternatives to Pattern.
  * Introduced ``ThickLine'' (which partially replaces the obsolete
    ``Window.Line''). Introduced ``Dark'' and ``Axes''.
  * Fixed rendering of non-concentric spherical gradients.

27 Nov 2011: Released v 0.3.1: bugfixes and small improvements.
  * BBox now sets (rather than extending) the bounding box.
  * Bugfix: bounding box for Clip is now only determined by the clipping path.
  * Bugfixes in the memory management of Box.
  * Bugfix: FillStyle was ignored.

18 Oct 2011: Released v 0.3.0: rewrote and improved G library in Box.
  * The Box graphics library was rewritten in Box itself. The library was
    re-engineered and is now much more clean and powerful. The old interface
    is still supported, but is now obsolete. Note that the new interface
    reproduces and offers to the user the features of the old interface,
    deriving high level functionality from lower level functionality.
    Example: Poly is expressed in terms of paths (Path) and command streams
    (CmdStream), similar to Metapost.
  * Added Dox, a documentation system for Box (which is now part of Boxer).
    The core library and the Box graphics library have been documented with