@@ -17,3 +17,4 @@ include "texts"
 include "gradient"
 include "thickline"
 include "image"
+include "save"
