@@ -24,9 +24,39 @@ Deg = Real
 ///Intro: the angle in degrees to be transformed to radians.
 Real@Deg[$$ = $*0.01745329251994329576]
 
-///Intro: specify a resolution in DPI (Dips Per Inch).
+///Intro: resolution to be associated to a raster (bitmapped) image.
+// The {type(.)} object is typically used to provide the resolution (points
+// per inch) to be used when saving a figure (see {type(Window)} and
+// {type(Figure)}) to a raster file format (such as PNG).
+Resolution = ++(Point point,)
+
+(.[)@Resolution[.point.x = .point.y = 0.0]
+
+///Intro: set the resolution separately in the X and Y directions.
+// The resolutions are provided in pixels (dots) per millimeter.
+Point@Resolution[.point = $]
+
+///Intro: ``Resolution[real]`` is equivalent to
+// ``Resolution[Point[.x=.y=real]]``.
+Real@Resolution[Point[.x=.y=$]]
+
+///Intro: a {type(.)} if it is positive.
+Resolution@IsValid[$.point.x > 0.0 && $.point.y > 0.0]
+
+///Intro: resolution in Points Per Inch.
+// {type(.)} is similar to {type(Resolution)}, but takes resolutions
+// units of Points Per Inch (PPI) rather than Points Per Millimeter.
+Ppi = Resolution
+
+///Intro: set the resolution separately in the X and Y directions.
+// The resolutions are provided in pixels (dots) per inch.
+Point@Ppi[.point = $/25.4]
+
+///Intro: ``Ppi[real]`` is equivalent to ``Ppi[Point[.x=.y=real]]``.
+Real@Ppi[Point[.x=.y=$]]
+
+///Intro: specify a resolution in DPI (Dots Per Inch).
 Dpi = Real
 
 ///Intro: the resolution in DPI as a Real number.
 Real@Dpi[$$ = $/25.4]
-
