@@ -22,7 +22,7 @@ Window@IsValid "Box_Lib_G_Window_At_Valid" ?
 // Available choices are: ``"fig"`` for abstract windows (windows which act
 // as command containers), ``"a1"``, ``"a8"``, ``"rgb24"`` or ``"argb32"`` for
 // 1, 8, 24 and 32 bit bit-mapped windows, ``"svg"``, ``"pdf"``,
-// ``"cairo:eps"``, ``"cairo:ps"``, ``"eps"`` or ``"eps"`` for vectorial
+// ``"cairo:eps"``, ``"cairo:ps"`` or ``"eps"`` for vectorial
 // windows.
 // Note that depending on the selected type of window, you may have to provide
 // extra parameters, such as the file name, the window size, etc.
@@ -55,8 +55,8 @@ Window.Save = Void
 Str@Window.Save "window_save_str" ?
 
 ///Intro: a window object can be provided to specify where to save the content
-//  of the parent Window. It can be either a complete Window or an incomplete
-//  one.
+// of the parent Window. It can be either a complete Window or an incomplete
+// one.
 Window@Window.Save "window_save_window" ?
 
 Window.Hot = Point
@@ -75,7 +75,16 @@ Real@Window.Res "window_res_real" ?
 ///Intro: provide separate resolutions for x and y.
 Point@Window.Res "window_res_point" ?
 
-///Intro: provide the coordiate of the origin in the window.
+///Intro: the resolution to use when rasterizing the window.
+// Resolutions are relevant only when operating in a bitmapped (pixellated)
+// window. A higher resolution provides a more detailed image (which is also
+// bigger in size)
+Resolution@Window[
+  [If[!IsValid[$]], Fail["Invalid resolution"]]
+  $$.Res[$.point]
+]
+
+///Intro: provide the coordinate of the origin in the window.
 Window.Origin = Void
 
 ///Intro: the origin coordinates.
